# gtagsjs

./: .gitignore  Gtags.hs  Gtagsjs.hs  Main.hs  Makefile  Setup.hs  configure  gtags.conf  gtagsjs.c  gtagsjs.cabal  install.sh  main.c  node.js  test.c  test.js
Gtags/: Class.hs  Instances.hs  Internal.hsc  JavaScript.hs  ParserParam.hsc
gtags/: Gtags.hs  gtags.c  gtags.cabal
gtags/Gtags/: Internal.hsc  ParserParam.hsc
gtagsjs-command/: gtagsjs-command.cabal
gtagsjs-function/: Setup.hs  gtagsjs-function.cabal
src/c/: gtagsjs.c  gtagsjs_plugin.c
src/hs/: Gtags.hs  Gtagsjs.hs
src/hs/Gtags/: JavaScript.hs  ParserParam.hsc
